--- a/index.html
+++ b/index.html
@@ -91,22 +91,20 @@
           <ul class="box_list justify_cnt_center">
             <li class="box_link">
               <span class="box_number justify_cnt_center light">1</span>
-              <div class="img_wrap">
-                <img src="/img/photo01.png" alt="" />
-              </div>
+              <div class="img_wrap"><img src="../img/photo01.png" alt="hill blue" /></div>
               <p class="box_text">Holisticly unleash <strong>revolutionary</strong> infrastructures without high standards in best practices</p>
             </li>
             <li class="box_link">
               <span class="box_number justify_cnt_center medium">2</span>
               <div class="img_wrap">
-                <img src="/img/photo02.png" alt="" />
+                <img src="../img/photo02.png" alt="hill brown" />
               </div>
               <p class="box_text">Distinctively procrastinate <strong>virtual</strong> platforms edge data</p>
             </li>
             <li class="box_link">
               <span class="box_number justify_cnt_center">3</span>
               <div class="img_wrap">
-                <img src="/img/photo03.png" alt="" />
+                <img src="../img/photo03.png" alt="hill green" />
               </div>
               <p class="box_text">Globally develop market positioning growth strategies <strong>vis-a-vis</strong> covalent web service grows covalent users</p>
             </li>
